LEGEND
------
  [!] New plugin
  [+] New feature
  [*] Enhancement
  [-] Bug fix


v1.2.3
------
  [-] The application will fail if the server terminates the connection before the user enters the password


v1.2.2
------
  [-] Full text search in file archive of messages in certain cases worked not correctly
  [-] Did not work contacts moving from an empty group
  [-] Proxy authorization in certain cases was not working


v1.2.1
------
  [*] Added skype status icons
  [*] The animation caching is added
  [*] Under Linux sounds always are reproduced through aplay call
  [-] Fixed deletion of history in join conference dialog
  [-] When editing control of a hotkey instead of empty value value by default was saved
  [-] The application may fail in some cases after unsuccessful Stanza-session initialization
  [-] In private chats history of communication are loaded even if the relevant setting has been disabled
  [-] When changing the nickname in the conference the nickname was not changed in the active conferences menu in the roster window
  [-] When requesting delivery of unread messages via RemoteControl in the message list fell messages from conferences and received on a different account
  [-] The behavior of history time removal widgets is corrected and unified in a settings window
  [-] The saved status messages including about a file transfer, were displayed with incorrect date when loading from history in windows of a usual chat and a private chat of conferences
  [-] Popup notifications appear now on that monitor where there is the main window
  [-] The behavior of the main window after Drag&Drop is corrected
  [-] Popup notifications are not capture input focus in Mac OS X
  [-] Fixed problem with message appearance in Adium style


v1.2.0
------
  [!] Added new plugin for notifications about birthdays
  [!] Added new plugin for loading data from custom types of URLs
  [!] Added new plugin for exchanging roster contacts